--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>İlk django sayfası</title>
+    <title>İlk django güncelleme</title>
 </head>
 <body>
     <h1>Hoşgeldin</h1>
