--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,12 +1,12 @@
 {% extends 'homebase.html' %}
-{% block title %} index sayfası {% endblock %}
+{% block title %} {{ settings.title }} {% endblock %}
 {% block keywords %} index sayfası anahtar kelimesi  {% endblock %}
 {% block decription %} index sayfası açıklama {% endblock %}
 
-{% block sidebar %}  {% include 'sidebar.html' %}{% endblock %}
-{% block slider %}
-    {% include 'slider.html' %}
+{% block head %}
+    <link rel='shortcut icon' type='image/x-icon' href='{{ settings.icon.url }}' />
 {% endblock %}
-{% block content %}
-    {% include 'content.html' %}
-{% endblock %}
+
+{% block sidebar %}{% include 'sidebar.html' %}{% endblock %}
+{% block slider %}{% include 'slider.html' %}{% endblock %}
+{% block content %}{% include 'content.html' %}{% endblock %}
