hakkımızda sayfası oluşturuldu

--- a/home/templates/footer.html
+++ b/home/templates/footer.html
@@ -90,12 +90,14 @@
     <!-- /container -->
 </footer>
 
+
+
 <!-- /FOOTER -->
 <!-- jQuery Plugins -->
-<script src="{% static 'js/jquery.min.'%}"></script>
-<script src="{% static 'js/bootstrap.min.'%}"></script>
-<script src="{% static 'js/jquery.stellar.min.'%}"></script>
-<script src="{% static 'js/main.'%}"></script>
+<script src="{% static 'js/jquery.min.js'%}"></script>
+<script src="{% static 'js/bootstrap.min.js'%}"></script>
+<script src="{% static 'js/jquery.stellar.min.js'%}"></script>
+<script src="{% static 'js/main.js'%}"></script>
 
 
 
@@ -126,4 +128,15 @@
 <script src="{% static 'js/script.js'%}"></script>
 
 
+
+
+<!-- Category -->
+<!-- jQuery Plugins -->
+
+<script src="{% static 'js1/jquery.min.js'%}"></script>
+<script src="{% static 'js1/bootstrap.min.js'%}"></script>
+<script src="{% static 'js1/slick.min.js'%}"></script>
+<script src="{% static 'js1/nouislider.min.js'%}"></script>
+<script src="{% static 'js1/jquery.zoom.min.js'%}"></script>
+<script src="{% static 'js1/main.js'%}"></script>
 
