--- a/home/templates/homebase.html
+++ b/home/templates/homebase.html
@@ -35,7 +35,7 @@
 
 
 
-    <!-- Slider-->
+    <!-- Slider------------------------------------- -->
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicon.png'%}" />
@@ -54,6 +54,27 @@
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="{% static 'css/style1.css'%}">
     <!-- /Slider-->
+    
+    <!--   category------------------------------- -->
+    <!-- Google font -->
+    <link href="https://fonts.googleapis.com/css?family=Hind:400,700" rel="stylesheet">
+
+    <!-- Bootstrap -->
+    <link type="text/css" rel="stylesheet" href="{% static 'css1/bootstrap.min.css'%}" />
+
+    <!-- Slick -->
+    <link type="text/css" rel="stylesheet" href="{% static 'css1/slick.css'%}" />
+    <link type="text/css" rel="stylesheet" href="{% static 'css1/slick-theme.css'%}" />
+
+    <!-- nouislider -->
+    <link type="text/css" rel="stylesheet" href="{% static 'css1/nouislider.min.css'%}" />
+
+    <!-- Font Awesome Icon -->
+    <link rel="stylesheet" href="{% static 'css1/font-awesome.min.css'%}">
+
+    <!-- Custom stlylesheet -->
+    <link type="text/css" rel="stylesheet" href="{% static 'css1/style.css'%}" />
+    <!-- /Category -->
 
     {% block head %} {% endblock %}
 </head>
