referanslarımız sayfası oluşturuldu

--- a/home/templates/sidebar.html
+++ b/home/templates/sidebar.html
@@ -131,7 +131,7 @@
                     </li><!-- / Aboutus -->
                     <!-- Refrences -->
                     <li class="dropdown ">
-                        <a href="/referanslar">Referanslar</a>
+                        <a href="/referanslarımız">Referanslar</a>
                     </li><!-- / Refrences -->
                     <!-- Contact -->
                     <li class="dropdown ">
