iletişim formu gönderme yapıldı

--- a/home/templates/sidebar.html
+++ b/home/templates/sidebar.html
@@ -135,11 +135,11 @@
                     </li><!-- / Refrences -->
                     <!-- Contact -->
                     <li class="dropdown ">
-                        <a href="/iletişim">İletişim</a>
+                        <a href="/iletisim">İletisim</a>
                     </li><!-- / Contact -->
                     <!-- Contact -->
                     <li class="dropdown ">
-                        <a href="/iletişim">Faq</a>
+                        <a href="/faq">Faq</a>
                     </li><!-- / Contact -->
                 </ul><!-- / .nav .navbar-nav -->
 
