--- a/home/templates/slider.html
+++ b/home/templates/slider.html
@@ -8,39 +8,25 @@
           <!--Slider -->
         <div id="hot-post" class="row hot-post">
             <div class="hero-slider">
-                <div class="slider-item th-fullpage hero-area" style="background-image: url({% static 'img/slider/slider-1.jpg'%});">
+                {% for rs in sliderdata %}
+                <div class="slider-item th-fullpage hero-area" style="background-image: url({{ rs.image.url }});">
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-8 text-center">
-                                <p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">PRODUCTS</p>
-                                <h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">The beauty of nature <br> is hidden in details.</h1>
-                                <a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="shop.html">Shop Now</a>
+                                <h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">{{rs.title}} <br> </h1>
+                                <p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">{{rs.description }}</p>
+                                <ul class="post-meta">
+                                    <li><a href="author.html" style="color: white">by.Admin</a></li>
+                                    <li style="color: white">{{rs.create_at}}</li>
+                                </ul>
+                                <p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">({{rs.category}}) </p>
+                                <a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="/blog/{{ rs.id }}/{{ rs.slug }}">Detail Now</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="slider-item th-fullpage hero-area" style="background-image: url({% static 'img/slider/slider-3.jpg'%});">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-8 text-left">
-                                <p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">PRODUCTS</p>
-                                <h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">The beauty of nature <br> is hidden in details.</h1>
-                                <a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="shop.html">Shop Now</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="slider-item th-fullpage hero-area" style="background-image: url({% static 'img/slider/slider-2.jpg'%});">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-8 text-right">
-                                <p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">PRODUCTS</p>
-                                <h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">The beauty of nature <br> is hidden in details.</h1>
-                                <a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="shop.html">Shop Now</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% endfor %}
+
             </div>
 
         </div>
