--- a/home/templates/slider.html
+++ b/home/templates/slider.html
@@ -17,7 +17,7 @@
                                 <p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">{{rs.description }}</p>
                                 <ul class="post-meta">
                                     <li><a href="author.html" style="color: white">by.Admin</a></li>
-                                    <li style="color: white">{{rs.create_at}}</li>
+                                    <li style="color: white">{{rs.create_at.date}}</li>
                                 </ul>
                                 <p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">({{rs.category}}) </p>
                                 <a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="/blog/{{ rs.id }}/{{ rs.slug }}">Detail Now</a>
