category blogların gösterimi yapıldı

--- a/home/templates/blogs.html
+++ b/home/templates/blogs.html
@@ -61,7 +61,7 @@
                                         <h3 class="post-title title-sm"><a >{{ rs.description }}</a></h3>
                                         <ul class="post-meta">
                                             <li><a href="/blog/{{ rs.id }}/{{ rs.slug }}">by.Admin</a></li>
-                                            <li>{{ rs.create_at }}</li>
+                                            <li>{{ rs.create_at.date }}</li>
                                         </ul>
                                     </div>
                                 </div>
