blog detay sayfası ve blog image galery oluşturuldu.

--- a/home/templates/blogs.html
+++ b/home/templates/blogs.html
@@ -53,8 +53,8 @@
                             <!-- post -->
                             <div class="col-md-3">
                                 <div class="post post-sm">
-                                    <a class="post-img" href="/blog/{{ rs.id }}/{{ rs.slug }}"><img src="{{ rs.image.url }}" alt=""></a>
-                                    <div class="post-body">
+                                    <a class="post-img" href="/blog/{{ rs.id }}/{{ rs.slug }}"><img src="{{ rs.image.url }}" alt="" style="height: 160px"></a>
+                                    <div class="post-body" style="height: 100px">
                                         <div class="post-category">
                                             <a href="/blog/{{ rs.id }}/{{ rs.slug }}">{{ rs.title }}</a>
                                         </div>
