--- a/home/templates/content.html
+++ b/home/templates/content.html
@@ -20,12 +20,12 @@
                                 <a class="post-img" href="/blog/{{ rs.id }}/{{ rs.slug }}" style="height: 200px"><img
                                         src="{{ rs.image.url }}"
                                         alt=""></a>
-                                <div class="post-body" style="height: 100px">
+                                <div class="post-body" style="height: 120px">
                                     <div class="post-category">
                                         <a href="/blog/{{ rs.id }}/{{ rs.slug }}">{{ rs.title }}</a>
                                     </div>
                                     <h5 class="post-title title-sm"><a href="/blog/{{ rs.id }}/{{ rs.slug }}"
-                                                                       style="height: 100px">{{ rs.description }}</a>
+                                                                       style="height: 120px">{{ rs.description }}</a>
                                     </h5>
                                     <ul class="post-meta" style="height: 10px">
                                         <li><a href="author.html">By.admin</a></li>
@@ -56,7 +56,7 @@
                                 <a class="post-img" href="/blog/{{ rs.id }}/{{ rs.slug }}"><img src="{{ rs.image.url }}"
                                                                                                 alt=""
                                                                                                 style="height: 150px"></a>
-                                <div class="post-body" style="height: 120px">
+                                <div class="post-body" style="height: 140px">
                                     <div class="post-category">
                                         <a href="/blog/{{ rs.id }}/{{ rs.slug }}">{{ rs.title }}</a>
                                     </div>
@@ -65,6 +65,7 @@
                                     </h3>
                                     <ul class="post-meta">
                                         <li><a href="author.html">By.Admin--{{ rs.create_at.date }}</a></li>
+                                        <li>{{ rs.category }}</li>
                                     </ul>
                                 </div>
                             </div>
