--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -20,7 +20,7 @@
                                font-family="AustinBold, Austin" font-weight="bold">
                                 <g id="Group" transform="translate(-108.000000, -297.000000)" fill="#000000">
                                     <text id="AVIATO">
-                                        <tspan x="104" y="325">Unsal Blogs</tspan>
+                                        <tspan x="104" y="322">Unsal Blog</tspan>
                                     </text>
                                 </g>
                             </g>
