--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -6,7 +6,7 @@
             <div class="col-md-4 col-xs-12 col-sm-4">
                 <div class="contact-number">
                     <i class="tf-ion-ios-email"></i>
-                    <span>{{ settings.email}}</span>
+                    <span>{{ settings.email }}</span>
                 </div>
             </div>
             <div class="col-md-4 col-xs-12 col-sm-4">
@@ -14,7 +14,8 @@
                 <div class="logo text-center">
                     <a href="/">
                         <!-- replace logo here -->
-                        <svg width="160px" height="29px" viewBox="0 0 180 29" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                        <svg width="160px" height="29px" viewBox="0 0 180 29" version="1.1"
+                             xmlns="http://www.w3.org/2000/svg"
                              xmlns:xlink="http://www.w3.org/1999/xlink">
                             <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" font-size="40"
                                font-family="AustinBold, Austin" font-weight="bold">
@@ -33,23 +34,23 @@
                 <ul class="top-menu text-right list-inline">
 
 
-                    <!-- Search -->
-                    <li class="dropdown search dropdown-slide">
-                        <form action="/search/" method="post">
-                            {% csrf_token %}
-                        <a href="/" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"><i
-                                class="tf-ion-ios-search-strong"></i> Search</a>
-                        <ul class="dropdown-menu search-dropdown">
-                            <li>
+                        <!-- Search -->
+                        <li class="dropdown search dropdown-slide">
 
+                            <a href="/" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"><i
+                                    class="tf-ion-ios-search-strong"></i> Search</a>
+                            <ul class="dropdown-menu search-dropdown">
+                                <li>
+                                    <form action="/search/" method="post">
+                                        {% csrf_token %}
 
-                                    <input type="search" class="form-control" placeholder="Search...">
+                                    <input type="search" class="form-control" placeholder="Search..." name="query">
 
+                                    </form>
+                                </li>
+                            </ul>
 
-                            </li>
-                        </ul>
-                        </form>
-                    </li><!-- / Search -->
+                        </li><!-- / Search -->
 
 
                     <!-- Languages -->
