--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -1,4 +1,6 @@
 {% load static %}
+
+
 <!-- Start Top Header Bar -->
 <section class="top-header">
     <div class="container">
@@ -29,39 +31,59 @@
                     </a>
                 </div>
             </div>
+
+            <script>
+
+                $(function () {
+                    $("#query").autocomplete({
+                        source: "/search_auto/",
+                        select: function (event, ui) { //item selected
+                            AutoCompleteSelectHandler(event, ui)
+                        },
+                        minLength: 2,
+                    });
+                });
+
+                function AutoCompleteSelectHandler(event, ui) {
+                    var selectedObj = ui.item;
+                }
+
+            </script>
+
+
+            </ul>
+
             <div class="col-md-4 col-xs-12 col-sm-4">
                 <!-- Cart -->
                 <ul class="top-menu text-right list-inline">
 
 
-                        <!-- Search -->
-                        <li class="dropdown search dropdown-slide">
-
-                            <a href="/" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"><i
-                                    class="tf-ion-ios-search-strong"></i> Search</a>
-                            <ul class="dropdown-menu search-dropdown">
-                                <li>
-                                    <form action="/search/" method="post">
-                                        {% csrf_token %}
-
-                                    <input type="search" class="form-control" placeholder="Search..." name="query">
-
-                                    </form>
-                                </li>
-                            </ul>
-
-                        </li><!-- / Search -->
+                    <!-- Search -->
+                    <li class="dropdown search dropdown-slide">
 
 
-                    <!-- Languages -->
-                    <li class="commonSelect">
-                        <select class="form-control">
-                            <option>EN</option>
-                            <option>DE</option>
-                            <option>FR</option>
-                            <option>ES</option>
-                        </select>
-                    </li><!-- / Languages -->
+                        <table>
+                            <tr>
+
+                                <form action="/search/" method="post">
+                                    {% csrf_token %}
+
+                                    <td><input type="search" class="form-control" placeholder="Search..." name="query"
+                                               id="query"></td>
+                                    <td>
+                                        <button type="submit" class="form-control"><i
+                                                class="tf-ion-ios-search-strong"></i></button>
+                                    </td>
+
+
+                                </form>
+                            </tr>
+
+
+                        </table>
+
+                    </li><!-- / Search -->
+
 
                 </ul><!-- / .nav .navbar-nav .navbar-right -->
             </div>
