--- a/home/templates/homebase.html
+++ b/home/templates/homebase.html
@@ -76,6 +76,14 @@
     <link type="text/css" rel="stylesheet" href="{% static 'css1/style.css'%}" />
     <!-- /Category -->
 
+
+     <!-- Jquery Ajax js  -->
+    <!-- jQuery !-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <!-- jQuery UI !-->
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+
     {% block head %} {% endblock %}
 </head>
 <body>
