login sayfası oluşturuldu

--- a/home/templates/content.html
+++ b/home/templates/content.html
@@ -31,6 +31,7 @@
                                         <li><a href="author.html">By.admin</a></li>
                                         <li>{{ rs.create_at.date }}</li>
                                         <li>{{ rs.category }}</li>
+                                        <li>{{ rs.comments.count }}</li>
                                     </ul>
                                 </div>
                             </div>
